src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

html {
  box-sizing: border-box;
  letter-spacing: -1px;
}

*, *:before, *:after {
  box-sizing: inherit;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
}

h3 {
  font-size: 32px;
  font-size: clamp(1.375rem, 0.9583333333333334rem + 1.8518518518518516vw, 2rem);
  font-weight: 500;
  color: white;
  /* font-size: clamp(1rem, 0.95rem + 0.25vw, 1.25rem); */
}

#root {
  width: 100%;
  margin: 0 auto;
  padding: 0;
  text-align: center;
  --max-content-width: min(90vw, 800px);
  --border-radius: 25px;
  --lrpadding: min(30px, 3.73vw)
}

body {
  margin: 0;
  font-family: "Inter", sans-serif;
}

html {
  background: no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-position-y: top;
}

.logo {
  display: flex;
  align-items: center;
}
.logo img {
  height: 30px;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: black;
  padding: 12px 0px;
  margin: 0;
  height: 54px;
  width: var(--max-content-width);
  margin: 0 auto;
}

.navbarBG{
  z-index: -1;
  opacity: 0.8;
  background-color: #ffffff33;
  width: 100%;
  height: 54px;
  position: absolute;
  backdrop-filter: blur(6px);
}



.toggleCF {
  display: flex;
}

input[type="checkbox"] {
  height: 0;
  width: 0;
  visibility: hidden;
}

.toggleCF label {
  cursor: pointer;
  width: 56px;
  height: 32px;
  background: #999999bb;
  display: block;
  border-radius: 100px;
  position: relative;
  color: #FFFFFF00;
  font-size: 0px;
}
.toggleCF label::after {
  font-size: 16px;
  color: #000000;
  font-weight: 500;
  content: "C";
  line-height: 26px;
  text-align: center;
  position: absolute;
  top: 3px;
  left: 3px;
  width: 26px;
  height: 26px;
  background: #fff;
  border-radius: 48px;
  transition: 0.3s;
}


input:checked + label {
  background: #999999bb;
}

input:checked + :after {
  content: "F";
  left: calc(100% - 5px);
  transform: translateX(-100%);
}

/* label:active:after {
  width: 28px;
} */

.knob {
  content: "";
  position: absolute;
  top: 3px;
  left: 3px;
  width: 26px;
  height: 26px;
  background: #fff;
  border-radius: 48px;
  transition: 0.3s;

}

.hero {
  margin: 60px;
  text-shadow: 3px 3px 12px #00000063;
}

.hero h1,
.hero h2 {
  line-height: 1;
  margin: 0px;
  font-weight: 400;
}

.hero .cityName {
  font-size: 40px;
}

.hero .temperature {
  font-weight: 300;
  letter-spacing: -8px;
  margin: 12px 0px;
}

.hero .degree {
  font-weight: 300;
  display: inline-block;
  width: 0px;
}

.highLow {
  display: flex;
  justify-content: center;
  gap: 20px;
  max-width: var(--max-content-width);
  margin: 10px auto;
}

body .temperature {
  font-size: 116px;
}

.hourlyForecastContainer {
  max-width: var(--max-content-width);
  text-align: left;
  margin: 0 auto;
  background-color: #55555533;
  border-radius: var(--border-radius);
  padding: 6px 0px 0px;
  backdrop-filter: blur(6px);
}

.tooltip {
  margin: 12px 30px 0px 0px;
  padding-left: var(--lrpadding);
  padding-bottom: 8px;
}

.tooltip h4 {
  color: #ffffff99;
  margin: 0;
  font-size: 20px;
  font-size: clamp(1rem, 0.8333333333333333rem + 0.7407407407407408vw, 1.25rem);
  font-weight: 500;
}

.hourlyForecast {
  height: 200px;
  display: flex;
  overflow: scroll;
  overflow-y: hidden;
  padding: 3px 0px 6px;
  gap: clamp(1rem, -0.41666666666666674rem + 6.296296296296297vw, 3.125rem);
  margin: 0px var(--lrpadding);
  border-top: 1px solid #eeeeee55;
}

.hourlyForecast::-webkit-scrollbar-thumb {
  background-color: grey;
  border: 5px solid transparent;
  border-radius: 8px;
  background-clip: padding-box;  
}

.hourlyForecast::-webkit-scrollbar {
  width: 16px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
  border: 5px solid transparent;
  border-radius: 8px;
  background-clip: padding-box;  
}

.hourModule {
  /* flex: 0 0 6.25vw; */
  color: black;
  /* padding: 0px 30px; */
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  /* margin: 0px 30px; */
}

.hourModule img {
  height: 64px;
  height: clamp(2.5rem, 1.5rem + 4.444444444444445vw, 4rem); 
}

.hourModule * {
  margin: 0px;
}

.dailyForecastContainer {
  max-width: var(--max-content-width);
  text-align: left;
  margin: 0 auto;
  background-color: #55555533;
  border-radius: var(--border-radius);
  margin: 15px auto 45px;
  padding: 6px 0px 8px;
  backdrop-filter: blur(6px);
}

.dailyForecast {
  max-width: var(--max-content-width);
  /* height: 600px; */
  display: flex;
  flex-direction: column;
  padding: 0px var(--lrpadding);
  gap: 10px;
}

.dayModule {
  display: flex;
  color: black;
  height: 64px;
  gap: 20px;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid #eeeeee55;
}

.dayModule > :nth-child(1){
  width: 31%;
  text-align: left;
}

.dayModule .imgContainer {
  width: 21%;
  /* height: 64px; */
}
.imgContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}
.imgContainer img{
  height: clamp(2.5rem, 1.5rem + 4.444444444444445vw, 4rem); 
}

.weatherBar {
  display: flex;
  flex: 1 1 auto;
  /* gap: 10px; */
  align-items: center;
  min-width: 156px;
  height: 100%;
}
.weatherBar :nth-child(3){
  text-align: right;
}
.weatherBar > h3 {
  width: 2.5rem;
  width: clamp(2.5rem, 1.6666666666666667rem + 3.7037037037037033vw, 3.75rem);
}

.weatherBarBG {
  background-color: darkgrey;
  flex: 1 1 auto;
  height: 10px;
  border-radius: 100px;
  margin-right: 2px;
}

.weatherBarInner {
  background-color: bisque;
  height: 100%;
  border-radius: 100px;
  position: relative;
}

.curTempIconContainer {
  height: 10px;
  width: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.curTempIconContainer img {
  height: 14px;
  width: 14px;
}

.resultsbg {
  z-index: 1;
  position: relative;
  background-color: #555555f3;
  border-radius: 6px;
}

.result {
  width: 100%;
  text-align: left;
}

.result h3 {
  font-size: 20px;
  font-weight: 400;
  letter-spacing: -0.7px;
}

.searchBar { 
  /* CONTAINS INPUT ELEMENT AND RESULTS */
  min-width: 150px;
  flex: 0 1 350px;
  margin: 0px 12px;
  align-self: flex-start;
  height: 30px;
}

#searchbar {
  /* THE ACTUAL INPUT ELEMENT */
  border-radius: 30px;
  background-color: #00000022;
  padding-left: 16px;
  width: 100%;
  height: 100%;
  /* background: url(/src/assets/search.svg) no-repeat scroll; */
  background-size: 23px;
  padding-right: 30px;
  background-position: right;
  background-position-x: calc(100% - 7px);
}

.searchBar input {
  text-align: left;
  height: 100%;
  height: 30px;
  border: 2px solid #eeeeeeee;
}

.searchBar button {
  height: 100%;
  background-color: #FFFFFF00;
  display: flex;
  align-items: center;
}

.searchImg {
  height: 23px;
  margin-left: -35px;
  user-select: none;
}

.ampm {
  font-size: 1.125rem;
  font-size: clamp(1.125rem, 0.75rem + 1.6666666666666667vw, 1.6875rem);
}

